feat: CRUD citas y documentación Swagger
